--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <h1>About Me</h1>
-<p><a href ="public/about.html">Find out more </a></p>
+<p><a href ="./about.html">Find out more </a></p>
 </br>
     <h1>Portfolio 1</h1>
-    <a href="public/movie-ranking.html"><img src="assets/images/movie-ranking.png" height="200"/> </a>
+    <a href="./movie-ranking.html"><img src="./movie-ranking.png" height="200"/> </a>
 </br>
 <h1>Portfolio 2</h1>
-<a href ="public/birthday-invite.html"><img src ="assets/images/birthday-invite.png" height="200"/> </a>
+<a href ="./birthday-invite.html"><img src ="./birthday-invite.png" height="200"/> </a>
 </br>
 <h1>Contact Me</h1>
-<p><a href ="public/contact.html">Find out more </a></p>
+<p><a href ="./contact.html">Find out more </a></p>
 </body>
 </html>
